--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         /* Main Container */
         .container {
-            max-width: 1200px; /* Even narrower max width for more compactness */
+            max-width: 95%; /* Even narrower max width for more compactness */
             margin: 2rem auto; /* Reduced margin for more vertical space */
             padding: 0 1rem; /* Reduced padding */
         }
