[Fix] Card description.

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 <div class="app-card">
                     <div class="card-header" role="button" aria-expanded="false" tabindex="0">
                         <h3>
-                            Punkterechner in Note
+                            Punkte zu Note
                             <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg>
                         </h3>
                         <div class="header-action-icons">
@@ -367,7 +367,7 @@
                         </div>
                     </div>
                     <div class="description-content">
-                        <p>Ein vielseitiges Werkzeug zum Berechnen und Verwalten von Noten. Ideal für Schüler, um den Überblick über Leistungen zu behalten.</p>
+                        <p>Ein Werkzeug zum Berechnen von Noten auf Basis von Punkten und dem IHK Notenschlüssel.</p>
                     </div>
                 </div>
                 <div class="app-card">
@@ -428,7 +428,7 @@
                 <div class="app-card">
                     <div class="card-header" role="button" aria-expanded="false" tabindex="0">
                         <h3>
-                            Punkterechner in Note
+                            Punkte zu Note
                             <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg>
                         </h3>
                         <div class="header-action-icons">
@@ -438,7 +438,7 @@
                         </div>
                     </div>
                     <div class="description-content">
-                        <p>Ein vielseitiges Werkzeug zum Berechnen und Verwalten von Noten. Ideal für Lehrer, um den Überblick über Leistungen zu behalten.</p>
+                        <p>Ein Werkzeug zum Berechnen von Noten auf Basis von Punkten und dem IHK Notenschlüssel.</p>
                     </div>
                 </div>
                 <div class="app-card">
